--- a/mlir/lib/Dialect/LinearSolver/CMakeLists.txt
+++ b/mlir/lib/Dialect/LinearSolver/CMakeLists.txt
@@ -1,5 +1,3 @@
-// Pseudo for init
-
 set(LLVM_OPTIONAL_SOURCES
     LinearSolverDialect.cpp
     LinearSolverOps.cpp
@@ -13,8 +11,18 @@ add_mlir_library(MLIRLinearSolver
     LinearSolverDialect.cpp
     LinearSolverOps.cpp
     LinearSolverTransforms.cpp
+
     LINK_LIBS PUBLIC
     MLIRIR
     MLIRTransformUtils
     MLIRSupport
+)
+
+# Ensure absolute paths are used for tblgen
+set(MLIR_TABLEGEN_EXTRA_ARGS
+    "-I${CMAKE_SOURCE_DIR}/mlir/include"
+    "-I${CMAKE_SOURCE_DIR}/llvm/include"
+    "-I${CMAKE_BINARY_DIR}/include"
+    "-I${CMAKE_BINARY_DIR}/tools/mlir/include"
+    "-I${CMAKE_SOURCE_DIR}/mlir/include/mlir/IR"
 )
